<resources>
    <string name="app_name">Mega Calculator</string>


<!--    <string name="app_id_admob" translatable="false">ca-app-pub-3940256099942544~3347511713</string>-->
<!--    <string name="banner_id_admob" translatable="false">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="interstitial_admob" translatable="false">ca-app-pub-3940256099942544/1033173712</string>-->
<!--    <string name="native_id_admob" translatable="false">ca-app-pub-3940256099942544/2247696110</string>-->



    <string name="action_settings">Settings</string>
    <string name="stdCal">Standard Calculator</string>
    <string name="sciCal">Scientific Calculator</string>
    <string name="unitCal">Unit Converter</string>
    <string name="FullCal">Calculator App</string>
    <string name="title_activity_standard_cal">StandardCal</string>
    <string name="title_activity_scientific_cal">ScientificCal</string>
    <string name="title_activity_unit_coverter">UnitConverter</string>
    <string name="clear">Ac</string>
    <string name="backspace">⌫</string>
    <string name="divide">÷</string>
    <string name="sqrt">√</string>
    <string name="cuberoot">\u221B</string>
    <string name="square">x²</string>
    <string name="cube">x\u00B3</string>
    <string name="tenpow">10\u207F</string>
    <string name="sininv">sin\u207B\u00B9</string>
    <string name="cosinv">cos\u207B\u00B9</string>
    <string name="taninv">tan\u207B\u00B9</string>
    <string name="posneg">±</string>
    <string name="arrow">↑</string>
    <string name="xpown">xⁿ</string>
    <string name="epown">eⁿ</string>
    <string name="pi">π</string>
    <string name="title_activity_unit_area">UnitArea</string>
    <string name="title_activity_unit_length">UnitLength</string>
    <string name="title_activity_unit_weight">UnitWeight</string>
    <string name="title_activity_unit_temperature">UnitTemperature</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>
    <string name="history">History</string>

    <string-array name="area">
        <item>Sq. Millimeter</item>
        <item>Sq. Centimeter</item>
        <item>Sq Meter</item>
        <item>Sq. Kilometer</item>
        <item>Acre</item>
        <item>Hectare</item>
    </string-array>

    <string-array name="length">
        <item>Nanometer</item>
        <item>Millimeter</item>
        <item>Centimeter</item>
        <item>Meter</item>
        <item>Kilometer</item>
        <item>Inches</item>
        <item>Foot</item>
        <item>Yards</item>
        <item>Mile</item>
    </string-array>

    <string-array name="temperature">
        <item>Celsius</item>
        <item>Farenheit</item>
        <item>Kelvin</item>
    </string-array>

    <string-array name="weight">
        <item>Milligrams</item>
        <item>Centigrams</item>
        <item>Decigrams</item>
        <item>Grams</item>
        <item>Kilograms</item>
        <item>Metric tonnes</item>
        <item>Pounds</item>
        <item>Ounces</item>
    </string-array>
    <string name="hint_interest_total">Total Interest for Loan</string>
    <string name="hint_principal">Principal Amount </string>
    <string name="hint_interest">Interest rate per Year %</string>
    <string name="hint_years">Number of Years</string>
    <string name="hint_emi">EMI</string>
    <string name="enterincome"> Enter Income</string>
    <string name="weight_metric">Weight in kilogram</string>
    <string name="height_metric">Height in meters</string>
    <string name="weight_imperial">Weight in pounds</string>
    <string name="height_imperial">Height in inch</string>
    <string name="more_information">More information on Wikipedia</string>
    <string name="wikipedia_bmi_link">https://en.wikipedia.org/wiki/Body_mass_index</string>
    <string name="bmi_result">BMI: %s</string>
    <string name="bmi_cat_1">Very severely underweight</string>
    <string name="bmi_cat_2">Severely underweight</string>
    <string name="bmi_cat_3">Underweight</string>
    <string name="bmi_cat_4">Normal (healthy weight)</string>
    <string name="bmi_cat_5">Overweight</string>
    <string name="bmi_cat_6">Obese Class I (Moderately obese)</string>
    <string name="bmi_cat_7">Obese Class II (Severely obese)</string>
    <string name="bmi_cat_8">Obese Class III (Very severely obese)</string>
    <string name="bmi_cat_9">Obese Class IV (Morbidly Obese)</string>
    <string name="bmi_cat_10">Obese Class V (Super Obese)</string>
    <string name="bmi_cat_11">Obese Class VI (Hyper Obese)</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="default_unit">@string/metric</string>
    <string name="action_about">About</string>
    <string name="author">Author</string>
    <string name="help_translating_this_app">Help translating this app!</string>
    <string name="rate_in_play_store">Rate in Play Store</string>
    <string name="share_with_friends">Share with your friends</string>
    <string name="check_out">Hey, check out this app: %s\n%s</string>
    <string name="title_activity_history">History</string>
    <string name="deleteHistory">Delete History</string>
    <string name="mode1">Degree</string>
    <string name="mode2">Radian</string>
    <string name="toggle">SWITCH</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="naturalLog">ln</string>
    <string name="hyperbolicSine">sinh</string>
    <string name="hyperbolicCosine">cosh</string>
    <string name="hyperbolicTan">tanh</string>
    <string name="log">log</string>
    <string name="Mod">%</string>
    <string name="inverse">1/x</string>
    <string name="factorial">x!</string>
    <string name="age_calculator">Age Calculator</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="emi_calculator">EMI Calculator</string>>
</resources>