<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#F7F8FB"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.kodlib.megacalculator.activities.EMIActivity">


    <RelativeLayout
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:onClick="onClick"
            android:src="@drawable/ic_back"
            app:tint="@color/dark_grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:text="EMI Calculator"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tool"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        app:cardCornerRadius="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/border_stroked_off"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">


                <EditText
                    android:id="@+id/principal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:digits="0123456789."
                    android:hint="@string/hint_principal"
                    android:inputType="number"
                    android:singleLine="true"
                    tools:ignore="Autofill" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_stroked_off"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <EditText
                    android:id="@+id/interest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:digits="0123456789."
                    android:hint="@string/hint_interest"
                    android:inputType="number"
                    android:singleLine="true"
                    tools:ignore="Autofill" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_stroked_off"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <EditText
                    android:id="@+id/years"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:digits="0123456789."
                    android:hint="@string/hint_years"
                    android:inputType="number"
                    tools:ignore="Autofill" />

            </RelativeLayout>


            <Button
                android:id="@+id/btn_calculate2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/gr_orange"
                android:text="Calculate"
                android:textColor="@android:color/white"
                tools:ignore="HardcodedText" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardData"
        android:layout_margin="15dp"
        app:cardCornerRadius="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Results:"
                android:textColor="@color/text_color"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/border_stroked_off"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <EditText
                    android:id="@+id/emi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/hint_emi"
                    android:inputType="number"
                    android:maxEms="0"
                    tools:ignore="Autofill" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_stroked_off"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <EditText
                    android:id="@+id/interest_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/hint_interest_total"
                    android:inputType="number"
                    tools:ignore="Autofill" />

            </RelativeLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <RelativeLayout
        android:id="@+id/bannerContainer"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <LinearLayout
            android:id="@+id/nativeFrameStd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"/>



    </RelativeLayout>


</RelativeLayout>